--- a/trunk/.project
+++ b/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>560project</name>
+	<name>Lab1560</name>
 	<comment></comment>
 	<projects>
 	</projects>
